@@ -6,6 +6,7 @@ top: normal exit code should be 0          #341272 #354255
 pgrep: usage error should exit with 2       #413383
 vmstat: use EXIT_FAILURE -- thanks Yoshio Nakamura   #425492
 sysctl: fix crash -- thanks Steinar Gunderson      #423704
+watch: tolerate umlauts                          #207103
 
 procps-3.2.6 --> procps-3.2.7
 
